# gameplay-vision-llm

./: .gitignore  LICENSE  README-MAC.md  README.md  RELEASE_NOTES_v1.0.5.md  pyproject.toml  requirements-core.txt  requirements-mac.txt  requirements.lock.txt  requirements.txt  setup_env.sh  setup_env_mac.sh
benchmarks/: __init__.py  eval_harness.py  metrics.py  model_configs.py  model_inference.py  perception_cache.py  run_phase1.py  run_phase2.py  run_phase3.py
benchmarks/loaders/: __init__.py  base.py  glitchbench.py  longvideo.py  physgame.py  videogameqa.py
data/training/: lora_training_data.json  pairs1.json  pairs2.json  pairs3.json
docs/: Multi-Modal Video LLM Project Research.txt  architecture_diagram.md
outputs/: .gitattributes  README.md  upload_to_hf.py
scripts/: demo_projector_inference.py  download_benchmarks.sh  extract_features.py  finetune_lora.py  inference.py  realtime_inference.py  realtime_inference_mac.py  smoke_test.py  test_pipeline.py  test_sam3.py  train_projectors.py
src/: __init__.py
src/agent_core/: game_knowledge_search.py  mlx_reasoning_core.py  qwen_reasoning_core.py
src/audio/: qwen_audio_processor.py
src/config/: __init__.py  presets.py
src/fusion_indexing/: knowledge_base_builder.py  schema.py  timeline_indexer.py
src/perception/: ocr_pipeline.py  sam_concept_segmenter.py  siglip_semantic_encoder.py
src/temporal/: __init__.py  context_manager.py  internvideo_hico_module.py
tests/: test_fusion_integration.py  test_reasoning_core.py
